fix product page image stretching

--- a/assets/style/product.css
+++ b/assets/style/product.css
@@ -40,6 +40,7 @@
     height: 540px;
     width: 65%;
     border-radius: 15px;
+    object-fit: cover;
 }
 
 
